# FeatherVK

./: .gitignore  CMakeLists.txt  README.md
Configurations/Rasterization/: Components.json  GameObjects.json
Configurations/RayTracing/: Components.json  GameObjects.json
Shaders/Editor/: ObjectId.frag  ObjectId.frag.spv  ObjectId.vert  ObjectId.vert.spv
Source/: Application.hpp  Buffer.cpp  Buffer.h  ComponentFactory.hpp  Descriptor.cpp  Descriptor.h  Device.cpp  Device.hpp  GUI.hpp  GameObject.hpp  Image.cpp  Image.h  Material.hpp  Model.cpp  Model.hpp  MyWindow.cpp  MyWindow.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.h  Sampler.cpp  Sampler.h  ShaderBuilder.h  Shaders.cpp  StructureInfos.h  SwapChain.cpp  SwapChain.hpp  Untils.h  main.cpp
Source/Components/: CameraComponent.hpp  Component.hpp  LightComponent.hpp  MeshRendererComponent.hpp  RayTracingManagerComponent.hpp  RigidBodyComponent.hpp  TransformComponent.hpp
Source/Components/Input/: CameraMovementComponent.hpp  InputControllerComponent.hpp  ObjectMovementComponent.hpp
Source/Core/: Events.hpp  Logger.hpp
Source/ECS/: SceneRegistry.hpp
Source/Managers/: LogicManager.hpp  RenderManager.hpp  ResourceManager.hpp
Source/RayTracing/: BLAS.hpp  TLAS.hpp
Source/RenderSystems/: ComputeSystem.hpp  EditorPickingRenderSystem.hpp  GizmosRenderSystem.hpp  GrassSystem.hpp  PostSystem.hpp  RayTracingSystem.hpp  RenderSystem.cpp  RenderSystem.h  ShadowSystem.hpp  SkyBoxSystem.hpp
Source/Utils/: JsonUtils.hpp  ProjectPaths.hpp  Utils.hpp
